#
# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#
# Copyright (C) 2021 Xilinx, Inc.
# Copyright (C) 2022-2024 Advanced Micro Devices, Inc.

add_subdirectory(ADF)
add_subdirectory(AIE)
add_subdirectory(AIEX)
add_subdirectory(AIEVec)
add_subdirectory(XLLVM)
