# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
#
# Copyright (C) 2023-2025 Advanced Micro Devices, Inc.

cmake_minimum_required(VERSION 3.30)
project("xaiengine lib for ${AIE_RUNTIME_TARGET}")

add_subdirectory(lib)
